feat: add customer creation feature and customer listing

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gestao-projetos",
   "license": "0BSD",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,14 +10,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "@react-navigation/drawer": "^7.5.2",
-    "expo": "~53.0.13",
+    "expo": "53.0.16",
+    "expo-router": "^5.1.2",
+    "expo-sqlite": "~15.2.13",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.4",
     "react-dom": "19.0.0",
-    "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "react-native": "0.79.5",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
