feat: apply styling to customer list, drawer menu and customer card

--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
       "edgeToEdgeEnabled": true
     },
     "plugins": [
-      "expo-sqlite"
+      "expo-sqlite",
+      "expo-font"
     ]
   }
 }
