chore: update Android build configuration and assets

--- a/app.json
+++ b/app.json
@@ -2,11 +2,12 @@
   "expo": {
     "name": "gestao-projetos",
     "slug": "gestao-projetos",
+    "scheme": "gestaoprojetos",
     "version": "1.0.0",
     "orientation": "portrait",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
     "splash": {
+      "image": "./assets/images/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -17,11 +18,18 @@
       "adaptiveIcon": {
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.ana.bilecki.gestaoprojetos"
     },
     "plugins": [
       "expo-sqlite",
+      "expo-router",
       "expo-font"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "8b5c85f5-c1d5-4fbb-bee8-1880e35ad280"
+      }
+    }
   }
 }
