--- a/package.json
+++ b/package.json
@@ -5,24 +5,28 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "@react-navigation/drawer": "^7.5.2",
-    "expo": "53.0.16",
-    "expo-router": "^5.1.2",
-    "expo-sqlite": "~15.2.13",
+    "@react-navigation/drawer": "^7.3.9",
+    "expo": "53.0.19",
+    "expo-font": "^13.3.2",
+    "expo-router": "~5.1.3",
+    "expo-splash-screen": "~0.30.10",
+    "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-reanimated": "^3.17.4",
-    "react-native-web": "^0.20.0",
-    "expo-font": "~13.3.2",
-    "expo-splash-screen": "~0.30.10"
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-mask-text": "^0.15.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "^4.11.1",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
